k8s/ndots-glibc.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: glibc-test
spec:

  containers:
    - name: glibc-test
      image: busybox:1.35.0-glibc
      args:
      - /bin/sh
      - -c
      - touch /tmp/healthy; date; echo initializing...; sleep 30d
      livenessProbe:
        exec:
          command:
          - cat
          - /tmp/healthy
        initialDelaySeconds: 5
        periodSeconds: 10
      readinessProbe:
        exec:
          command:
          - cat
          - /tmp/healthy
        initialDelaySeconds: 5
        periodSeconds: 10
  #dnsPolicy: ClusterFirst # this is the default if no values provided
  #dnsPolicy: Default # uses node upstream
  dnsConfig:
    options:
      - name: ndots
        value: "1" # will be tried as absolute if at least 1 period
